# pushin_boxes

./: .gitignore  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md
.github/workflows/: ci.yaml  ci.yml  release.yaml
assets/images/: LICENSE
assets/levels/: 1.lvl  10.lvl  11.lvl  12.lvl  13.lvl  14.lvl  15.lvl  16.lvl  2.lvl  3.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  9.lvl
assets/levels/stock/: 1.lvl  10.lvl  11.lvl  12.lvl  13.lvl  14.lvl  15.lvl  16.lvl  2.lvl  3.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  9.lvl
assets/sounds/: LICENSE
crates/game_core/: Cargo.toml
crates/game_core/src/: lib.rs
crates/game_core/src/input/: action.rs  direction.rs  input.rs  mod.rs
crates/game_core/src/level/: data.rs  level.rs  mod.rs  record.rs  snapshots.rs  state.rs  update.rs
crates/game_core/src/map/: map.rs  mod.rs  position.rs
crates/game_map/: Cargo.toml
crates/game_map/src/: lib.rs
crates/game_plugins/: Cargo.toml
crates/game_plugins/src/: config.rs  lib.rs  theme.rs
crates/game_plugins/src/assets/: fonts.rs  mod.rs  plugin.rs  sounds.rs
crates/game_plugins/src/character/: animation.rs  character.rs  mod.rs
crates/game_plugins/src/input/: action.rs  direction.rs  event.rs  mod.rs  plugin.rs
crates/game_plugins/src/level/: brush.rs  done_timer.rs  entity.rs  event.rs  handles.rs  helpers.rs  insertion.rs  map_position.rs  mod.rs  plugin.rs  resource.rs
crates/game_plugins/src/level/internal/: kind.rs  level.rs  mod.rs  record.rs  snapshots.rs  state.rs
crates/game_plugins/src/level/internal/map/: entity.rs  mod.rs  position.rs
crates/game_plugins/src/resources/: brush.rs  images.rs  mod.rs  scene.rs  sounds.rs  state.rs
crates/game_plugins/src/resources/level/: entity.rs  event.rs  handles.rs  kind.rs  mod.rs  plugin.rs  position.rs  record.rs  resource.rs  snapshots.rs  state.rs
crates/game_plugins/src/resources/level/map/: position.rs
crates/game_plugins/src/resources/save_file/: mod.rs
crates/game_plugins/src/save_file/: handle.rs  mod.rs  plugin.rs  save_file.rs
crates/game_plugins/src/scenes/: mod.rs  plugin.rs
crates/game_plugins/src/scenes/editor/: mod.rs  plugin.rs  systems.rs  ui.rs
crates/game_plugins/src/scenes/instructions/: mod.rs  plugin.rs  systems.rs  ui.rs
crates/game_plugins/src/scenes/level/: mod.rs  plugin.rs  systems.rs  ui.rs
crates/game_plugins/src/scenes/limit/: mod.rs  plugin.rs  systems.rs  ui.rs
crates/game_plugins/src/scenes/options/: mod.rs  plugin.rs  systems.rs  ui.rs
crates/game_plugins/src/scenes/passed/: mod.rs  plugin.rs  systems.rs  ui.rs
crates/game_plugins/src/scenes/selection/: mod.rs  plugin.rs  systems.rs  ui.rs
crates/game_plugins/src/scenes/title/: mod.rs  plugin.rs  systems.rs  ui.rs
crates/game_plugins/src/scenes/win/: mod.rs  plugin.rs  systems.rs  ui.rs
crates/game_plugins/src/state/: event.rs  mod.rs  plugin.rs  state.rs
crates/game_ui/: Cargo.toml
crates/game_ui/src/: colors.rs  lib.rs
crates/game_ui/src/components/: button.rs
crates/game_ui/src/components/text/: dynamic.rs  embossed.rs  mod.rs  simple.rs
crates/game_ui/src/layout/: container.rs  overlay.rs
src/: assets.rs  config.rs  input.rs  level.rs  lib.rs  main.rs  player.rs  state.rs
src/core/: brush.rs  input.rs  mod.rs  state.rs  ui.rs
src/core/level/: components.rs  entity.rs  mod.rs  position.rs  stock.rs  tag.rs
src/core/save_file/: mod.rs  stock.rs
src/game/: brush.rs  mod.rs  state.rs
src/game/level/: entity.rs  mod.rs
src/game/resources/: brush.rs  input.rs  mod.rs
src/game/resources/level/: components.rs  custom.rs  entity.rs  mod.rs  position.rs  stock.rs  tag.rs
src/game/resources/save_file/: mod.rs
src/game/save_file/: mod.rs  stock.rs
src/game/scenes/: mod.rs  selection.rs
src/level/: mod.rs  player.rs  snapshots.rs  state.rs  tag.rs
src/level/map/: entity.rs  mod.rs  position.rs
src/resources/: animations.rs  brush.rs  camera.rs  colors.rs  fonts.rs  handles.rs  images.rs  mod.rs  prelude.rs  scene.rs  sounds.rs  state.rs  systems.rs
src/resources/assets/: colors.rs  images.rs  levels.rs  mod.rs  sounds.rs
src/resources/input/: action.rs  buffer.rs  direction.rs  mod.rs
src/resources/level/: event.rs  handles.rs  mod.rs  position.rs  prelude.rs  record.rs  snapshots.rs  state.rs  tag.rs
src/resources/level/map/: entity.rs  mod.rs  position.rs
src/resources/save_file/: data.rs  handle.rs  mod.rs
src/scenes/: mod.rs
src/scenes/editor/: mod.rs  ui.rs
src/scenes/instructions/: mod.rs  ui.rs
src/scenes/level/: mod.rs  ui.rs
src/scenes/limit/: mod.rs  ui.rs
src/scenes/loading/: mod.rs  ui.rs
src/scenes/options/: mod.rs  ui.rs
src/scenes/passed/: mod.rs  ui.rs
src/scenes/selection/: mod.rs  ui.rs
src/scenes/title/: mod.rs  ui.rs
src/scenes/win/: mod.rs  ui.rs
src/ui/: mod.rs
src/ui/components/: button.rs  mod.rs  picture.rs  text.rs
src/ui/components/text/: dynamic.rs  embossed.rs  mod.rs  simple.rs
src/ui/layout/: container.rs  housing.rs  mod.rs  overlay.rs
src/ui/markers/: button.rs  counter.rs  mod.rs
wasm/: index.html
