[package]
name = "game_plugins"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_ui_bits = "0.12"
game_core = { path = "../game_core" }
ron = "0.10"
serde = { workspace = true }
regex = "1.11"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[dependencies.bevy]
workspace = true

[dependencies.bevy_common_assets]
version = "0.13"
default-features = false
features = ["ron"]

[dependencies.bevy_asset_loader]
version = "0.23"
default-features = false
features = ["2d"]

[dependencies.bevy_kira_audio]
version = "0.23"
default-features = false
features = ["wav"]

[dependencies.hashbrown]
version = "0.15"
features = ["serde"]

[dependencies.uuid]
version = "1.17"
default-features = false
features = ["v4", "fast-rng", "serde"]
